<resources>
    <string name="app_name">Techpro-admins-app</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_places">Saved places</string>
    <string name="log_out">Log out</string>
    <string name="read_more_about_us">Read more about us!</string>
    <string name="personal_information">Personal Information</string>
    <string name="mama_junior">Mama Junior</string>
    <string name="online">Online</string>
    <string name="enter_message">Enter Message</string>
    <string name="new_orders">New Orders</string>
    <string name="earnings">Earnings</string>
    <string name="_12_00">$12.00</string>
    <string name="_345_market_st_san_francisco_ca_94111">345 Market St, San Francisco, CA 94111</string>
    <string name="location">Location</string>
    <string name="work_to_do">Work to do:</string>
    <string name="replace_faulty_capacitors_on_a_malfunctioning_circuit_board_using_specialized_soldering_equipment">Replace faulty capacitors on a malfunctioning circuit board using specialized soldering equipment.</string>
    <string name="accept_order_20s">Accept Order (20s)</string>
</resources>